--- a/css/styles.css
+++ b/css/styles.css
@@ -568,6 +568,7 @@ a {
     height: 40px;
     display: flex;
     align-items: center;
+    justify-content: center;
     font-family: var(--primary-font);
     font-weight: 500;
     font-size: 16px;
